src/test/ui/issues/issue-50264-inner-deref-trait/option-as_deref.stderr
error[E0599]: no method named `as_deref` found for enum `std::option::Option<{integer}>` in the current scope
  --> $DIR/option-as_deref.rs:2:29
   |
LL |     let _result = &Some(42).as_deref();
   |                             ^^^^^^^^ help: there is an associated function with a similar name: `as_ref`
   |
   = note: the method `as_deref` exists but the following trait bounds were not satisfied:
           `{integer}: std::ops::Deref`
           `<{integer} as std::ops::Deref>::Target = _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
